[package]
edition = "2021"
name = "AoC"
version = "0.1.0"
[dependencies]
test-log = {version="0.2.8",  default-features = false, features=["trace"]}
tracing = "*"
tracing-subscriber = {version = "0.3.3", default-features = false, features = ["env-filter", "fmt"]}

[dependencies.hashbrown]
features = ["nightly", "rayon"]
version = "0.11"
